# serializer version: 1
# name: test_list[action_set]
  '''
  Available actions:
  
  testfiles_static
      Transforms a file to another file (testcase for action_set)
  
  
  '''
# ---
# name: test_list[action_set].1
  list([
    'Byggfile.py',
    'files',
    'files/a.txt',
    'files/b.txt',
    'files/c.txt',
  ])
# ---
# name: test_list[action_set].2
  list([
    'Byggfile.py',
    'files',
    'files/a.txt',
    'files/b.txt',
    'files/c.txt',
    'files/out',
    'files/out/a.txt',
    'files/out/b.txt',
    'files/out/c.txt',
  ])
# ---
# name: test_list[action_set].3
  list([
    'Byggfile.py',
    'files',
    'files/a.txt',
    'files/b.txt',
    'files/c.txt',
    'files/out',
  ])
# ---
